0.0.4 - Current

* Added support for type casting (Tyler Hunt)

0.0.3 - May 7, 2009

* Fixed the :as option for specifying name aliases (Tyler Hunt)
* Added missing dependencies to the Rakefile (Tyler Hunt)

0.0.2 - May 6, 2009

* Fixed an issue with load paths (Tyler Hunt)

0.0.1 - May 6, 2009

* First public release (Tyler Hunt)