@@ -1,6 +1,7 @@
 0.0.4 - Current
 
 * Added support for type casting (Tyler Hunt)
+* Updated to raise Relief::ParseError on parse errors (Tyler Hunt)
 
 0.0.3 - May 7, 2009
 
